--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -1,5 +1,9 @@
 html {
-    background-color: #AEC9E4;
+    background-color: #A6C9E7;
+    background: -webkit-linear-gradient(#A6C9E7, white); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#A6C9E7, white); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#A6C9E7, white); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#A6C9E7, white); /* Standard syntax */
 }
 body {
     margin: 0px;
@@ -31,9 +35,9 @@ a {
     border-right: none;
 }
 #sidebar-name {
-    font-size: 24px;
+    font-size: 26px;
     color: black;
-    line-height: 24px;
+    line-height: 26px;
     font-weight: 600;
     margin-bottom: 10px;
 }
@@ -46,20 +50,23 @@ a {
     -moz-transition: left 0.5s ease;
 }
 .sidebar-link:hover {
-    color: #61B329;
+    color: #D8AE5A;
 }
 .sidebar-list {
     list-style-type: none;
     padding: 0px;
+    font-size: 24px;
 
 }
 .sidebar-list li {
     text-align: left;
+    font-size: 20px;
+
 }
 #expand {
     height: 25px;
     position: fixed;
-    bottom: 15px;
+    top: 15px;
     left: 7px;
 }
 #sidebar-container:hover #sidebar > #expand{
