--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -11,8 +11,8 @@
     overflow: hidden;
 }
 #pic-of-me img {
-    height: 75%;
-    width: 100%;
+    max-height: 75%;
+    max-width: 100%;
     overflow: hidden;
     margin-top: 12.5%;
     margin-bottom: 12.5%;
