--- a/resources/css/projects.css
+++ b/resources/css/projects.css
@@ -87,14 +87,14 @@
 
 }
 .left-arrow {
-    margin-top: 11%;
+    margin-top: 90px;
     margin-left: 5%;
     float: left;
 }
 .right-arrow {
     float: right;
     margin-right: 10%;
-    margin-top: 10%;
+    margin-top: 90px;
 }
 .right-arrow svg {
     height: 55px;
