projects pages css positioning fixes for variable sized windows

--- a/resources/css/projects.css
+++ b/resources/css/projects.css
@@ -1,100 +1,72 @@
-.project {
-    margin: auto;
-    margin-left: 5%;
-    width: 80%;
-    height: 50%;
-}
+
 .selected-proj {
     margin: auto;
-    margin-left: 5%;
-    width: 80%;
+    width: 65%;
     height: 50%;
+    height: 95%;
 }
 .proj-info {
-    height: 30%;
-    width: 70%;
-    margin: auto;
-    margin-left: 25%;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    padding-bottom: 5px;
+    max-height: 30%;
+    max-width: 80%;
+    margin: 20px auto;
+    padding: 5px 10px 5px 10px;
     text-align: center;
 }
 .proj-title {
     font-size: 38px;
     margin: auto;
-    margin-left: 19%;
-    margin-bottom: 5%;
-    padding-top: 3%;
+    padding: 25px 15px 25px 0px;
     text-align: center;
     font-weight: bold;
     color: black;
 }
-.code-link {
-    border: 1pt solid black;
-    height: 7%;
-    width: 12%;
+.links {
     margin: auto;
-    margin-left: 47%;
+    width: 240px;
+    height: 30px;
+    margin-top: 5px;
+}
+.single-links {
+    width: 120px;
+    height: 30px;
+    margin-top: 5px;
+    margin: auto;
+}
+.project-link {
+    border: 1pt solid black;
+    height: 25px;
+    width: 100px;
     font-size: 15px;
     text-align: center;
     background-color: #737373;
     display: inline-block;
     color: white;
+    margin: 0 5px 0 5px;
 
 }
-.code-link:hover {
+.project-link:hover {
     background-color: black;
 }
-.website-link {
-    border: 1pt solid black;
-    height: 7%;
-    width: 12%;
-    font-size: 15px;
-    text-align: center;
-    background-color: #737373;
-    display: inline-block;
-    color: white;
-}
-.website-link:hover {
-    background-color: black;
-}
-.single-link {
-    margin-left: 53.5%;
-    border: 1pt solid black;
-    height: 7%;
-    width: 12%;
-    font-size: 15px;
-    text-align: center;
-    background-color: #737373;
-    display: inline-block;
-    color: white;
-}
-.single-link:hover {
-    background-color: black;
-}
+
 .proj-pic {
-    margin-left: 22%;
+    margin: auto;
     width: 80%;
-    height: 85%;
+    height: 45%;
+    overflow: hidden;
 }
 .proj-pic img {
-    min-height: 10%;
-    min-width: 20%;
-    max-height: 100%;
-    max-width: 100%;
-    margin-left: 7%;
-
+    max-width: 90%;
+    margin: auto;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 .left-arrow {
-    margin-top: 90px;
-    margin-left: 5%;
+    margin-top: 15%;
     float: left;
 }
 .right-arrow {
+    margin-top: 15%;
     float: right;
-    margin-right: 10%;
-    margin-top: 90px;
 }
 .right-arrow svg {
     height: 55px;
@@ -117,12 +89,21 @@
     width: 55px;
     cursor: pointer;
     fill: #737373;
+    transition: fill 0.3s ;
+    -webkit-transition: fill 0.3s; 
+    -moz-transition: fill 0.3s;
 }
 .left-arrow:hover > svg {
     transition: fill 0.3s ;
     -webkit-transition: fill 0.3s; 
     -moz-transition: fill 0.3s;
     fill: black;
+}
+#circle-container {
+    width: 160px;
+    height: 50px;
+    margin: auto;
+    margin-top: 5px;
 }
 .circle {
     height: 12px;
@@ -131,14 +112,10 @@
     background-color: #737373;
     display: inline-block;
     margin: 12px;
-    margin-top: 21%;
 
 }
 .circle:hover {
     cursor: pointer;
-}
-#circ-1 {
-    margin-left: 47.3%;
 }
 .selected-circ {
     height: 12px;
@@ -147,5 +124,4 @@
     background-color: #cccccc;
     display: inline-block;
     margin: 12px;
-    margin-top: 21%;
 }
