--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -14,7 +14,12 @@ a {
     cursor: pointer;
     color: #61B329;
 }
-
+.coming-soon {
+    margin: auto;
+    font-size: 40px;
+    height: 100px;
+    width: 400px;
+}
 #sidebar-container {
     position: fixed;
     width: 140px;
