--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -3,15 +3,16 @@
     width: 90%;
 }
 #pic-of-me {
-    height: 100%;
+    height: 90%;
     width: 35%;
-    margin-left: 70px;
+    margin-left: 100px;
     margin-right: 0px;
+    padding-bottom: 20px;
     display: inline-block;
     overflow: hidden;
 }
 #pic-of-me img {
-    max-height: 75%;
+    max-height: 100%;
     max-width: 100%;
     overflow: hidden;
     margin-top: 12.5%;
